# barq-nosql

./: .gitignore  Cargo.toml  README.md
benches/: Cargo.toml  throughput.rs
crates/barq-cli/: Cargo.toml
crates/barq-cli/src/: main.rs
crates/barq-core/: Cargo.toml
crates/barq-core/src/: document.rs  error.rs  lib.rs  migration.rs  quota.rs  schema.rs  types.rs
crates/barq-graph/: Cargo.toml
crates/barq-graph/src/: adjacency.rs  edge.rs  graph_engine.rs  lib.rs  traversal.rs
crates/barq-index/: Cargo.toml
crates/barq-index/src/: btree_index.rs  hnsw_index.rs  index_manager.rs  inverted_index.rs  lib.rs  secondary_index.rs
crates/barq-query/: Cargo.toml
crates/barq-query/src/: cost_estimator.rs  executor.rs  lib.rs  parser.rs  planner.rs
crates/barq-server/: Cargo.toml
crates/barq-server/src/: engine.rs  handlers.rs  lib.rs  main.rs  router.rs
crates/barq-server/src/handlers/: transactions.rs
crates/barq-storage/: Cargo.toml
crates/barq-storage/src/: consistency.rs  consistency_guard.rs  failure_handler.rs  lib.rs  memory_manager.rs  memtable.rs  sstable.rs  storage_engine.rs  transaction.rs  transaction_manager.rs  txn_conflict.rs  types.rs  wal.rs
crates/barq-vector/: Cargo.toml
crates/barq-vector/src/: distance.rs  lib.rs  vector_ops.rs
docs/: ARCHITECTURE.md
