[workspace]
resolver = "2"
members = [
    "crates/barq-core",
    "crates/barq-storage",
    "crates/barq-index",
    "crates/barq-query",
    "crates/barq-graph",
    "crates/barq-vector",
    "crates/barq-server",
    "crates/barq-cli",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
dashmap = "5"
crossbeam = "0.8"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
lz4_flex = "0.11"
crc32fast = "1"
memmap2 = "0.9"
