[package]
name = "barq-server"
version = "0.1.0"
edition = "2021"

[dependencies]
barq-core = { path = "../barq-core" }
barq-storage = { path = "../barq-storage" }
barq-index = { path = "../barq-index" }
barq-graph = { path = "../barq-graph" }
barq-query = { path = "../barq-query" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
