[package]
name = "barq-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
barq-core = { path = "../barq-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
lz4_flex = { workspace = true }
crc32fast = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
